add btn-text class to html and stylized it

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
       <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.</p>
       <h2> $149.99 <span> $169.99</span></h2>
-      <button><h4>Add to Cart</h4></button>
+      <button class="btn-text">Add to Cart</button>
       <img src="images/icon-cart.svg" class=" cart-icon" alt="icon-cart">
-
     </section>
   </main>
 </body>
